Center align all sections, make text green, fix Matplotlib logo

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,11 @@ header {
     height: 150px;
 }
 
+h1, .title, h2.green-text {
+    color: #00A86B; /* Зеленый цвет */
+    text-align: center;
+}
+
 h1 {
     font-size: 2.5em;
     margin-bottom: 10px;
@@ -32,40 +37,34 @@ h1 {
 
 .title {
     font-size: 1.2em;
-    color: #777;
+    color: #00A86B;
     margin-top: 0;
+    text-align: center;
 }
 
 h2 {
     font-size: 1.5em;
-    color: #333;
+    color: #00A86B; /* Зеленый цвет */
     margin-top: 30px;
     border-bottom: 2px solid #ddd;
     padding-bottom: 10px;
+    text-align: center;
+}
+
+.centered-section {
+    text-align: center;
 }
 
 ul {
     list-style: none;
     padding: 0;
+    text-align: left;
+    display: inline-block;
+    margin: 0 auto;
 }
 
 ul li {
     margin-bottom: 10px;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-}
-
-table, th, td {
-    border: 1px solid #ddd;
-}
-
-th, td {
-    padding: 10px;
-    text-align: left;
 }
 
 .skills-container {
@@ -73,6 +72,7 @@ th, td {
     overflow: hidden;
     width: 100%;
     position: relative;
+    justify-content: center;
 }
 
 .skills-wrapper {
@@ -122,4 +122,5 @@ a:hover {
 
 .contact div {
     margin-bottom: 10px;
+    text-align: center;
 }
